Landing page of story builder complete, edit page.
Grid for story previews complete and modularized. Small change to filter styling

--- a/style/Filter.css
+++ b/style/Filter.css
@@ -7,7 +7,7 @@
 }
 
 .filters {
-    width: 770px;
+    width: 80%;
     
     display: block; 
     
@@ -22,7 +22,7 @@
 }
 
 .filter{
-    width: 250px;
+    width: calc(100% / 3);
     height: 100%;
     display: inline-block;
     vertical-align: top;
