--- a/style/Filter.css
+++ b/style/Filter.css
@@ -1,11 +1,4 @@
 /* Filter */
-#filter-bar{
-    width: 100%;
-    height: 90px;
-    background-color: #a0eaf7;
-    overflow: visible;
-}
-
 .filters {
     width: 80%;
     
@@ -27,6 +20,7 @@
     display: inline-block;
     vertical-align: top;
     padding: 10px;
+    position: relative;
 }
 
 .filter button{
@@ -75,11 +69,10 @@
 
 #options
 {
-    
+    position: absolute;
     display: none;
     
-    width: 100%;
-    height: 200%;
+    width: calc(100% - 20px);
     
     background-color: #195f81;
     
@@ -89,9 +82,9 @@
     
     padding: 5px;
     padding-top: 30px;
-    top: -20px;
+    top: 60%;
+    left: 10px;
     
-    position: relative;
     margin-left: auto;
     margin-right: auto;
 }
