--- a/style/Stories.css
+++ b/style/Stories.css
@@ -1,14 +1,16 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 #new-stories{
 	background-color: #0098BA;
 	height: 400px;
 }
-#more-stories{
+#more-stories-title, #bookmarks-title{
     background-color: #A0EAF7;
-    color: #004e74;
+    color: #004E74;
     text-align: center;
-    font-size: 25px;
+    font-size: 2em;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
     padding-top: 10px;
 }
 #filter-bar{
@@ -48,4 +50,14 @@
     border: none;
     border-radius: 0px 50% 50% 0px;
 
+}
+
+#stories-header, #stories{
+    width: 80%;
+    margin: 0px auto;
+}
+#stories-header{
+    padding: 5px 15px;
+    font-size: 1.75em;
+    color: #004E74;
 }
