--- a/style/Edit.css
+++ b/style/Edit.css
@@ -4,7 +4,7 @@
 	position: relative;
 	background-color: #0098BA;
 	width: 100%;
-	height: 23%;
+	padding-bottom: 25px;
 	font-family: Arial, Helvetica, sans-serif;
 	padding-top: 15px;
 }
