--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -1,9 +1,37 @@
-header
+/* Hiding old header */
+header #language-selector, header #logo-wrapper, header nav
 {
     display: none;
+}
+
+header
+{
+    border: none;
 }
 
 footer
 {
     display: none;
 }
+
+/* new header */
+header #backBtn
+{
+    height: 75px;
+    width: 75px;
+    
+    border-radius: 50%;
+    border: 1px;
+    
+    float: right;
+}
+
+header #backBtn img
+{
+    height: 100%;
+    width: 100%;
+}
+
+/* Main Menu */
+
+/* Core Game */
