lane changes (pushed so I can merge w/ chase)

--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -86,10 +86,19 @@ header #score span
 .lane
 {
     width: 100%;
-    height: 30%;
-    margin-bottom: 5%;
-    background-color: darkgray;
+    height: 45%;
+    
+    background-color: black;
     opacity: .3;
+    
+    position: absolute;
+    bottom: 0;
+}
+
+#top
+{
+    bottom: 26%;
+    background-color: blueviolet;
 }
 
 
