more editor work

--- a/style/Editor.css
+++ b/style/Editor.css
@@ -36,31 +36,52 @@
 #editor-content{
 	position: relative;
 	width: 90%;
-	padding: 25px;
 	color: #004D75;
 }
-#editor-content-wrapper{
+.editor-content-wrapper{
 	position: relative;
-	height: calc(100% - 50px);
+	height: calc(100% - 55px);
 	width: 100%;
 }
-#editor-content-wrapper h1{
+.editor-content-wrapper h1{
 	margin: 0px;
-	margin-bottom: 15px;
+	padding: 15px 25px;
 }
-#editor-content-wrapper h2{
+.editor-content-wrapper .main-content{
+	height: calc(100% - 2em - 30px);
+	padding: 25px;
+	overflow: auto;
+	overflow: overlay;
+}
+.editor-content-wrapper h2{
 	margin: 0px;
 	margin-bottom: 10px;
 	font-size: 1.25em;
 }
-#editor-content-wrapper .half{
+.editor-content-wrapper .half, 
+.editor-content-wrapper .third, 
+.editor-content-wrapper .two-thirds, 
+.editor-content-wrapper .quarter, 
+.editor-content-wrapper .three-quarters{
 	float: left;
 	width: calc(50% - 20px);
 	margin: 10px;
 }
+.editor-content-wrapper .third{
+	width: calc((100% / 3 ) - 20px);
+}
+.editor-content-wrapper .two-thirds{
+	width: calc((100% * 2 / 3 ) - 20px);
+}
+.editor-content-wrapper .quarter{
+	width: calc((100% / 4 ) - 20px);
+}
+.editor-content-wrapper .three-quarters{
+	width: calc((100% * 3 / 4 ) - 20px);
+}
 #editor-content .save-button{
 	position: absolute;
-	bottom: 25px;
+	top: calc(100% - 50px);
 	left: 25%;
 	height: 40px;
 	width: 50%;
@@ -73,6 +94,9 @@
 #editor-content .save-button:hover{
 	font-weight: bold;
 }
+#editor-content .save-button:disabled{
+	display: none;
+}
 
 #editor-content .modal{
 	position: absolute;
@@ -81,6 +105,104 @@
 	height: 100%;
 	width: 100%;
 	background: rgba(0, 0, 0, .5);
+}
+#editor-content .add-text-button, #editor-content .add-page-button{
+	width: 100%;
+    padding: 5px 40px;
+    background: none;
+    margin: 5px 0px;
+    color: #0097BA;
+    background-repeat: no-repeat;
+    background-size: 1em;
+    background-position: 10px 50%;
+
+	border: 2px dotted #0097BA;
+	border-radius: 10px;
+	font-size: 2em;
+	line-height: .5em;
+	text-align: center;
+}
+#editor-content .add-page-button{
+	padding: 5px;
+	font-size: 1.5em;
+	line-height: 1em;
+	clear: right;
+}
+#editor-content .add-text-button:hover, #editor-content .add-page-button:hover{
+    color: #004D75;
+	border-color: #004D75;
+}
+.editor-content-wrapper label{
+	font-size: 1.5em;
+	color: #0097BA;
+}
+.editor-content-wrapper input, .editor-content-wrapper select, .editor-content-wrapper textarea{
+	width: 100%;
+	border: 2px solid #0097BA;
+	border-radius: 5px;
+	font-size: 1.2em;
+	padding: 1px 2px;
+}
+.editor-content-wrapper textarea{
+	resize: none;
+	height: 200px;
+	overflow: auto;
+}
+.editor-content-wrapper .quarter label{
+	display: block;
+	width: 100%;
+	text-align: right;
+}
+
+
+.editor-content-wrapper button{
+	width: 100%;
+	padding: 5px 40px;
+	background: none;
+	text-align: left;
+	margin: 5px 0px;
+	color: #0097BA;
+	font-size: 1em;
+	border: 2px solid #0097BA;
+	border-radius: 5px;
+	font-size: 1.2em;
+	background-repeat: no-repeat;
+	background-size: 1em;
+	background-position: 10px 50%;
+}
+.editor-content-wrapper button:hover{
+	font-weight: bold;
+	color: #004D75;
+	border-color: #004D75;
+}
+.editor-content-wrapper button.add-button{
+	border: none;
+	background-image: url('../img/icons/General/icon_Add_LtBlue.svg');
+}
+.editor-content-wrapper button.add-button:hover{
+	background-image: url('../img/icons/General/icon_Add_DkBlue.svg');
+}
+.editor-content-wrapper button.delete-button{
+	border: none;
+	background-image: url('../img/icons/General/icon_Delete_LtBlue.svg');
+}
+.editor-content-wrapper button.delete-button:hover{
+	background-image: url('../img/icons/General/icon_Delete_DkBlue.svg');
+}
+.editor-content-wrapper .page-icon{
+	padding-left: 1em;
+    font-size: 1em;
+    background-size: 1em;
+    background-repeat: no-repeat;
+}
+.editor-content-wrapper .page-icon.added{
+	background-image: url('../img/icons/StoryBuilder/icon_SB_Complete_LtBlue.svg');
+}
+.editor-content-wrapper .page-icon.missing{
+	background-image: url('../img/icons/StoryBuilder/icon_SB_InComplete_LtBlue.svg');
+}
+.editor-content-wrapper .page-icon.o-missing{
+	background-image: url('../img/icons/StoryBuilder/icon_SB_Optional_LtBlue.svg');
 }
 
 /* Language */
@@ -130,19 +252,10 @@
 	.delete-story-language:hover{
 		background-image: url('../img/icons/General/icon_Delete_DkBlue.svg');
 	}
-	.add-language{
-		border: 2px dotted #0097BA;
-		border-radius: 20px;
-		font-size: 2em;
-		line-height: .5em;
-		text-align: center;
-	}
-	.add-language:hover{
-		border-color: #004D75;
-	}
 /************/
 
 /* Cover */
+
 	#cover-image-container{
 		position: relative;
 		min-height: 25%;
@@ -175,5 +288,73 @@
 		background-image: url('../img/icons/General/icon_Upload_hoverDown.svg');
 		color: #004D75;
 		font-weight: bold
+	}
+/*********/
+
+/* Metadata */
+	#metadata-content .two-thirds .quarter{
+		clear: left;
+	}
+	#metadata-content .two-thirds .three-quarters > *{
+		width: 100%;
+	}
+/************/
+
+/* Pages */
+	#pages-content .main-content > div{
+		height: 100%;
+		position: relative;
+	}
+	#pages-content .quarter, #pages-content .three-quarters{
+		margin: 0px;
+	}
+	#pages-content .quarter{
+		width: calc(100% / 4);
+	}
+	#pages-content .three-quarters{
+		width: calc(100% * 3 / 4);
+	}
+	#pages-content .page-nav .quarter{
+		margin-right: 10px;
+	}
+	#pages-content .page-nav-button{
+		padding: 5px;
+		text-align: center;
+		border: none;
+		font-size: 1.2em;
+		color: : #9EE9F6;
+		background: #EBFAFD;
+	}
+	#pages-content .page-nav-button{
+		height: 40px;
+		color: #0097BA;
+		background: #EBFAFD;		
+		border-radius: 5px 5px 0px 0px;
+		margin: 0px;
+	}
+	#pages-content .page-nav-button.active{
+		color: #004E74;
+		background: #9EE9F6;
+		font-weight: bold;	
+	}
+	#page-legend{
+		clear: left;
+	}
+	.page-nav{
+		display: block;
+		height: 40px;
+	}
+	#page-preview{
+		height: calc(100% - 140px);
+	}
+	#page-legend{
+		height: 100px;
+		padding: 5px;
+	}
+	#page-edit-content{
+		border: 15px solid #9EE9F6;
+		padding: 10px 25px;
+		border-radius: 0px 5px 5px 5px;
+		height: calc(100% - 40px);
 	}
 /*********/
