--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -110,20 +110,61 @@ header #score span
 
 .lane
 {
-    width: 100%;
-    height: 45%;
-    
-    background-color: black;
-    opacity: .3;
+    height: 500px;
+    width: 2000%;
     
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
+    
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.lane .inner
+{
+    height: 500px;
+    display: table-cell;
+    vertical-align: bottom;
 }
 
 #top
 {
     bottom: 26%;
-    background-color: blueviolet;
+    
 }
 
+.car
+{
+    display: inline-block;
+    width: 600px;
+    height: 250px;
+    vertical-align: bottom;
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
+.car img
+{
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
+
+.bus
+{
+    display: inline-block;
+    width: 1080px;
+    height: 460px;
+    position: relative;
+    vertical-align: bottom;
+    
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.bus img
+{
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
