--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -82,30 +82,31 @@
 
 /* Page Indicator */
 .pageTitle.overlay{
-      background-color: #004e74;
+    background-color: rgba(0,78,116,.85);
     padding-top: 0px;
     z-index: 1;
     width: 100%;
-    height: 30px;
-    opacity: .7;
+    height: 35px;
     transition: opacity .5s;
     color: White;
     top: 45px;
-    
+}
+.pageTitle.overlay span{
+    font-size: 23px;
 }
 .pageTitle{
-     background-color: #004e74;
+    background-color: #004e74;
     padding-top: 5px;
 
     width: 100%;
     height: 25px;
-    font-size: 25px;
+    
     color: White;
     position: relative;
     
     text-align: center;
     
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", "Segoe UI", Arial, Helvetica, sans-serif;
 }
 
 .page-indicator.overlay
