--- a/style/Edit.css
+++ b/style/Edit.css
@@ -5,8 +5,8 @@
 	background-color: #0098BA;
 	width: 100%;
 	padding-bottom: 25px;
-	font-family: Arial, Helvetica, sans-serif;
-	padding-top: 15px;
+	font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+	padding-top: 25px;
 }
 
 #new-story-info h2{
@@ -15,8 +15,8 @@
 
 #new-story-info p{
 	margin-top: 5px;
-	line-height: 1.2em;
-    font-size: 1.2em;
+	line-height: 1.3em;
+    font-size: 1.3em;
 }
 
 #new-story-info button{
@@ -26,7 +26,7 @@
 #edit-story-info{
 	position: relative;
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI", Arial, Helvetica, sans-serif;
 	color: #004E74;
 	font-weight: bold;
 }
@@ -36,7 +36,8 @@
 	font-style: italic;
 	font-weight: bold;
 	font-size: 1.2em;
-	margin: 10px;
+	margin-bottom: 10px;
+	margin-top: 20px;
 }
 
 #edit-story-info h2{
@@ -45,6 +46,8 @@
 
 #edit-begin-info{
 	margin: 5px;
+	font-weight: 500;
+    font-size: 1.3em;
 }
 
 #filter-bar{
@@ -61,9 +64,13 @@
 	font-size: 1.2em;
 	color: white;
 	text-decoration: none;
+	margin: 20px;
 }
 
 #get-started:active{
 	font-weight: bold;
 	background-color: #0098BA;
+}
+#nav-edit-icon{
+	background-image: url('../../img/icons/NavBar/nav_SB_hover_selected.svg');
 }
