--- a/style/Filter.css
+++ b/style/Filter.css
@@ -1,7 +1,7 @@
 /* Filter */
 .filters {
     width: 80%;
-    
+    height: 85px;
     display: block; 
     
     color: white;
@@ -15,7 +15,7 @@
 }
 
 .filter{
-    width: calc(100% / 3);
+    width: calc(94% / 3);
     height: 100%;
     display: inline-block;
     vertical-align: top;
@@ -25,42 +25,85 @@
 
 .filter button{
     border: solid;
-    border-radius: 25px;
+    border-radius: 150px;
     border-color: #004e74;
     
-    font-size: 110%;
+    font-size: .7em;
     text-align: center;
     
     background-color: #004e74;
     color: white;
     
     width: 100%;
-    height: 150%;
+    height: 100%;
     
     padding: 5%;
+    padding-top: 7%;
     position: relative;
     z-index: 1;
+}
+#WrittenLanguageFilter, #SortByFilter{
+  margin-left: 3%;
 }
 
 .filter button img
 {
-    height: 20px;
-    width: 30px;
-    padding-right: 5px;
-    
+    height: 30px;
+    width: 45px;
+    margin-left: -15px;
+    bottom: 9px;
     position: relative;
     float: left;
     vertical-align: middle;
 }
 
+@media (min-width:900px) {
+  .filter button{
+      font-size: .8em;
+      padding-top: 5%;
+  }
+  .filter button img{
+      bottom: 10px;
+      height: 36px;
+      width: 54px;
+  }
+}
+@media (min-width:1050px) {
+  .filter button{
+      font-size: 1em;
+      padding-top: 3.5%;
+  }
+  .filter button img{
+      bottom: 8px;
+  }
+}
+@media (min-width:1200px) {
+  .filter button{
+      font-size: 1.3em;
+      padding-top: 2%;
+  }
+  .filter button img{
+      bottom: 4px;
+  }
+}
 .filter button img.dropdownIcon
 {
+    height: 18px;
+    width: 27px;
     position: relative;
     float: right;
     padding-left: 5px;
     padding-right: 0px;
+    margin-left: 0px;
+    margin-right: -5px;
+    bottom: 0px;
 }
-
+@media (min-width:900px) {
+  .filter button img.dropdownIcon{
+    height: 22px;
+    width: 33px;
+  }
+}
 .filter button:hover
 {
     cursor: pointer;
@@ -115,12 +158,13 @@ Thanks: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_che
 
 .checkmark { /* Create a custom checkbox */
     position: absolute;
-    top: 0;
+    top: 3px;
     left: 0;
     height: 20px;
     width: 20px;
     background-color: #eee;
     margin-left: 8px;
+    border-radius: 25%;
 }
 
 
