--- a/style/Login.css
+++ b/style/Login.css
@@ -1,24 +1,23 @@
 #loginHolder{
 	position: absolute;
 	top: 0px;
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI", Arial, Helvetica, sans-serif;
 	text-align: center;
 	background-color: #0098BA;
 	color: #FFFFFF;
 }
 #loginHolder h1{
 	font-size: 40px;   
-	padding-top: 50px;
 }
 #loginHolder h2{
-	font-size: 15px;    
+	margin-top: 0px;    
 }
 #register-form{
 	width: 30%;
 	min-width: 400px;
-	margin: 5px auto 30px;
+	margin: 5px auto 20px;
 }
 #login-form{
 	background-color: #0098BA;
@@ -35,7 +34,7 @@
 }
 #register-form label, #login-form label{
 	font-weight: bold;
-	font-size: 0.8em;
+	font-size: 1.2em;
 }
 #register-form input, #login-form input{
 	padding: 10px;
@@ -55,6 +54,8 @@
 	display: block;
 	margin : 0px auto;
 	border-radius: 40px;
+	margin-top: 25px;
+	font-size: 1.5em;
 }
 #register-form button, #login-form button{
 	width: 100%;
