--- a/style/viewer.css
+++ b/style/viewer.css
@@ -40,7 +40,7 @@
 
 #viewerBar span {
     color: #004e74;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     font-size: 45px;
     font-weight: bold;
     padding: 0 25px;
@@ -207,7 +207,7 @@
     width: 70%;
 
     color: #0098ba;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 40px;
 
@@ -271,7 +271,7 @@
     margin-left: 1px;
 
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     font-size: 30px;
 
     position: relative;
@@ -342,7 +342,7 @@
     transition: height .6s, opacity .4s;
     
     
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     font-size: 24px;
     color: white;
 }
@@ -583,7 +583,7 @@ input[type=email] {
 .modal {
 
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
     text-align: center;
     background-color: #0098ba;
     color: #ffffff;
