--- a/style/Stories.css
+++ b/style/Stories.css
@@ -3,7 +3,7 @@ body{
 }
 #new-stories{
 	background-color: #0098BA;
-	height: 400px;
+	height: 70%;
 }
 #more-stories-title, #bookmarks-title{
     background-color: #A0EAF7;
