--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -16,16 +16,17 @@ header
 }
 .title span{
     width: 100%;
+    height: 260px;
     padding-top: 100px;
     text-align: center;
     display: block;
-    font-size: 100px;
+    font-size: 120px;
 }
 @media only screen and (max-width: 600px){
     .title span{
              font-size: 80px;
     }
-
+    
 
 }
 
@@ -76,23 +77,83 @@ main
     background-size: contain;
     background-repeat: repeat-x;
 }
-#playBtn{
+.Btn{
    margin-top:10%;
     display: inline-block;
+
 }
 .centered{
   text-align: center;
+   
+}
+.imageContainer img{
+    height: 100%;
+    width: 100%;
+}
+.imageContainer{
+     display: inline-block;
+    text-align: center;
+    height:130px;
+    width: 130px;
+    margin-right: 40px;
 }
 
 #pageContent{
     display: block;
-    height : 20%;
-    width: 60%;
-    border: solid 10px;
+    height : 40%;
+    width: 70%;
+    background-color: #d0edfb;
+    border: solid 7px;
 margin: 0 auto;
-    border-color: blue;
+    border-color: #005291;
     border-radius: 10px;
+    max-width: 900px;
+  margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 80px;
+    padding-top: 25px;
+    padding-left: 15px;
+   
     
+    
+}
+#pageContentScore{
+    display: block;
+    height : 40%;
+    width: 464px;
+    background-color: #d0edfb;
+    border: solid 7px;
+margin: 0 auto;
+    border-color: #005291;
+    border-radius: 10px;
+    max-width: 800px;
+  margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 100px;
+    padding-top: 25px;
+    padding-left: 15px;
+    text-align: center;
+   
+    
+    
+}
+@media only screen and (max-width: 900px){
+    #pageContent{
+             font-size: 65px;
+    }
+
+
+}
+#bus{
+ 
+    height: auto;
+    width: 100%;
+ 
+}
+#busStop{
+    width: 70%;
+    margin-left:15%;
+    margin-top: 10px;
 }
 /* Main Menu */
 
