--- a/style/Carousel.css
+++ b/style/Carousel.css
@@ -33,7 +33,7 @@
     border-bottom-width: 0px;
     border-top-width: 0px;
     padding-bottom: 40px;
-    border-radius: 25px;
+    border-radius: 7px;
     background-color: #004e74;
 }
 
@@ -106,7 +106,7 @@
     
     text-align: center;
     
-    font-family: "Segoe UI", "Segoe UI", Arial, Helvetica, sans-serif;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
 }
 
 .page-indicator.overlay
