--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -326,7 +326,7 @@ header #score span
     margin-left: 1.4%;
 }
 
-.window p, .window video, .window div
+.window span, .window video, .window div
 {
     display: inline-block;
     height: calc(100%);
@@ -340,11 +340,11 @@ header #score span
     overflow: hidden;
 }
 
-.window p span
+.window  span
 {
     color: white;
     font-size: 50px;
-    height: 50px;
+    height: 100%;
     
     text-align: center;
     
