--- a/style/BusGame.css
+++ b/style/BusGame.css
@@ -213,6 +213,7 @@ header #score span
     
     position: relative;
     bottom: 0;
+    left: 0;
     
     margin-left: 5px;
     margin-right: 5px;
